# hijack-agentic-ai

./: .env.example  .gitignore  LICENSE  README.md
demos/demo1-indirect-prompt-injection/: Dockerfile  README.md  pyproject.toml
demos/demo1-indirect-prompt-injection/src/: __init__.py  agent.py  main.py  models.py
demos/demo1-indirect-prompt-injection/src/assets/: offer-5-acme-poisoned.md
demos/demo2-mcp-tool-abuse/: Dockerfile.weather-mcp  README.md  docker-compose.yml  pyproject.toml
demos/demo2-mcp-tool-abuse/src/: __init__.py  agent.py  main.py  models.py
demos/demo2-mcp-tool-abuse/src/mcp_servers/: __init__.py  weather_server.py
demos/demo3-rag-poisoning/: README.md  docker-compose.yml  pyproject.toml
demos/demo3-rag-poisoning/src/: __init__.py  agent.py  main.py  models.py  rag.py
demos/demo3-rag-poisoning/src/assets/: forecasting-data-collection.md  forecasting-model-selection.md  forecasting-quality-assurance-poisoned.md
demos/demo3-rag-poisoning/src/leak_server/: __init__.py
demos/demo4-prompt-shield/: README.md  docker-compose.yml  pyproject.toml
demos/demo4-prompt-shield/src/: agent.py  guardrails.py  loader.py  main.py
demos/demo4-prompt-shield/src/assets/: offer-1-codevision.md  offer-2-innovatetech.md  offer-3-globaldev.md  offer-4-budgetcode.md
demos/demo5-secure-rag/: Dockerfile  Dockerfile.leak-api  README.md  docker-compose.yml  pyproject.toml
demos/demo5-secure-rag/src/: agent.py  guardrails.py  main.py
demos/demo5-secure-rag/src/assets/: forecasting-quality-assurance-poisoned.md  forecasting-reporting-standards.md  forecasting-validation-methods.md
demos/demo5-secure-rag/src/leak_server/: leak_api.py
docs/: introduction.md  securing-agentic-ai.md
