[project]
name = "demo4-prompt-shield"
version = "0.1.0"
description = "Demo 4: Prompt Shield — Securing the Offer Analyzer (Evolution of Demo 1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flock-core",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
